--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,19 +1,17 @@
 .my-masonary-grid {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    margin-left: -30px;
-    width: auto;
+    margin-left: -20px;
 }
 
 .my-masonary-grid_column {
-    padding-left: 30px;
+    border-left: 20px solid transparent;
     background-clip: padding-box;
 }
 
 .my-masonary-grid_column > div {
-    background: gray;
-    margin-bottom: 30px;
+    background: #ddd;
+    padding: 20px;
+    margin-bottom: 20px;
 }
 
 .character {
